# senzing-mcp-server

./: README.md  debug_mcp_startup.sh  mcp_server_wrapper.sh  pyproject.toml  test_connection.py
src/senzing_mcp_server/: __init__.py  server.py
