[project]
name = "senzing-mcp-server"
version = "0.2.0"
description = "MCP server for Senzing Entity Resolution SDK v4"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kevin Talbert", email = "ktalbert@cloudera.com" }
]
dependencies = [
    "mcp>=0.9.0",
]

[project.scripts]
run-server = "senzing_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/kevinbtalbert/senzing-mcp-server"
Repository = "https://github.com/kevinbtalbert/senzing-mcp-server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/senzing_mcp_server"]

